[package]
name = "volume"
version = "0.1.1"
edition = "2021"

[dependencies.windows]
version = "0.52"
features = [
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
