[package]
name = "volume"
version = "1.3.0"
edition = "2021"

[dependencies.windows]
version = "0.61"
features = [
	"Win32_Devices_FunctionDiscovery",
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell_PropertiesSystem"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
